[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/laserGreenShot.png" type="Texture" id=1]
[ext_resource path="res://Bullets/Bullet2.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 100.0

[node name="Bullet2" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 6, -22, 6.8, -15, 10.2, -18, 14.8, -18, 18, -14.8, 18, -10.5, 16.3, -7, 21.3, -7, 28, -5.1, 28, 4, 27, 4, 16.2, 6.5, 18.6, 16, 15.5, 16, 9, 19.2, 9, 16.4, 7, 15.8, 7, 22.4, 5.2, 27, -5, 27, -5, 26, -6.7, 15, -7.5, 15, -16, 19.2, -16, 15.5, -19.2, 9, -16.4, 9, -15.9, 7.7, -28, 5.7, -28, 3.3, -28, -5, -26.3, -5, -15, -6.7, -15, -7.9, -18, -9.9, -18, -14.8, -14.8, -18, -10.5, -18, -7, -16.2, -7, -22.5, -5, -26.5, 6, -27 )

[node name="Detonation" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
[connection signal="timeout" from="Detonation" to="." method="_on_Detonation_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
